# Trabalho-LP

./: CMakeLists.txt  equipments.c  equipments.h  geral.c  geral.h  listings.c  listings.h  main.c  menus.c  menus.h  search.c  search.h  user.c  user.h
